<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#050927"
        android:elevation="20dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            style="@style/main"
            android:text="@string/heading_textview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.029"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.033" />

        <TextView
            android:id="@+id/question_no_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/question_no_textview"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#10173A"
            android:elevation="12dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_no_textview">

            <TextView
                android:id="@+id/question_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/armata"
                android:padding="6dp"
                android:text="@string/question_textview"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/true_button"
            style="@style/true_button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/share_button"
            android:elevation="20dp"
            android:text="@string/true_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <Button
            android:id="@+id/false_button"
            style="@style/true_button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:backgroundTint="#010523"
            android:elevation="20dp"
            android:text="@string/false_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/true_button" />

        <Button
            android:id="@+id/next_button"
            style="@style/true_button"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/purple_500"
            android:elevation="20dp"
            android:text="@string/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.996"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/false_button" />

        <TextView
            android:id="@+id/current_textview"
            android:layout_width="143dp"
            android:layout_height="28dp"
            android:layout_marginBottom="32dp"
            android:padding="4dp"
            android:text="@string/current_textview"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.059"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/highest_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="140dp"
            android:text="@string/highest_score_textview"
            android:textColor="#F64242"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.803"
            app:layout_constraintStart_toEndOf="@+id/textView" />

        <Button
            android:id="@+id/restart_button"
            style="@style/true_button"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/clear_button"
            app:layout_constraintEnd_toStartOf="@+id/next_button"
            app:layout_constraintHorizontal_bias="0.904"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/false_button" />

        <Button
            android:id="@+id/submit_button"
            style="@style/true_button"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginBottom="120dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/submit_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/false_button"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>